--- a/src/varta/view/Login.fxml
+++ b/src/varta/view/Login.fxml
@@ -12,7 +12,7 @@
          <children>
             <TextField fx:id="userid" layoutX="151.0" layoutY="80.0" />
             <Label layoutX="70.0" layoutY="85.0" text="User Name" />
-            <Button fx:id="loginButton" layoutX="218.0" layoutY="119.0" mnemonicParsing="false" text="Go!" />
+            <Button fx:id="loginButton" layoutX="218.0" layoutY="119.0" mnemonicParsing="false" text="Enter" />
          </children>
       </AnchorPane>
    </children>
