--- a/src/varta/view/ChatWindow.fxml
+++ b/src/varta/view/ChatWindow.fxml
@@ -18,8 +18,8 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextArea fx:id="sendMsg" layoutX="189.0" layoutY="372.0" prefHeight="99.0" prefWidth="172.0" />
-            <Button fx:id="sendButton" layoutX="398.0" layoutY="372.0" mnemonicParsing="false" prefHeight="99.0" prefWidth="100.0" text="SEND">
+            <TextArea fx:id="sendMsg" layoutX="189.0" layoutY="372.0" prefHeight="55.0" prefWidth="172.0" />
+            <Button fx:id="sendButton" layoutX="367.0" layoutY="372.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="100.0" text="SEND">
                <font>
                   <Font size="24.0" />
                </font>
@@ -35,7 +35,27 @@
                </items>
             </ToolBar> -->
             <AnchorPane fx:id="friends" layoutX="3.0" layoutY="49.0" prefHeight="399.0" prefWidth="182.0" />
-            <Slider fx:id="timeToLive" layoutX="369.0" layoutY="369.0" orientation="VERTICAL" prefHeight="105.0" prefWidth="16.0" />
+            <Slider fx:id="timeToLive" layoutX="478.0" layoutY="375.0" orientation="VERTICAL" prefHeight="105.0" prefWidth="16.0" />
+            <Button fx:id="snap" layoutX="189.0" layoutY="435.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="84.0" text="SNAP">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="video" layoutX="283.0" layoutY="435.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="84.0" text="VIDEO">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="p2p" layoutX="375.0" layoutY="435.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="84.0" text="P2P">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Label layoutX="51.0" layoutY="16.0" text="All Chats">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
