--- a/src/varta/view/Login.fxml
+++ b/src/varta/view/Login.fxml
@@ -9,20 +9,21 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="varta.view.LoginController">
    <children>
-      <AnchorPane layoutY="7.0" prefHeight="256.0" prefWidth="431.0" AnchorPane.leftAnchor="0.0">
+      <AnchorPane layoutY="7.0" prefHeight="281.0" prefWidth="431.0" AnchorPane.leftAnchor="0.0">
          <children>
             <TextField fx:id="password" layoutX="151.0" layoutY="101.0" />
             <Label layoutX="70.0" layoutY="65.0" text="User Name" />
             <Button fx:id="loginButton" layoutX="219.0" layoutY="141.0" mnemonicParsing="false" text="Go!" />
             <TextField fx:id="userid" layoutX="151.0" layoutY="60.0" />
             <Label layoutX="74.0" layoutY="101.0" text="Password" />
-            <Button fx:id="signup" layoutX="205.0" layoutY="208.0" mnemonicParsing="false" text="Sign up!" />
+            <Button fx:id="signup" layoutX="203.0" layoutY="213.0" mnemonicParsing="false" text="Sign up!" />
             <Label layoutX="138.0" layoutY="178.0" text="Not Signed up yet ? Sign up Now!" />
             <Label layoutX="149.0" text="MASS CHAT">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
+            <Label fx:id="invalid" layoutX="158.0" layoutY="247.0" text="Invalid Username/Password" textFill="#d01414" visible="false" />
          </children>
       </AnchorPane>
    </children>
