--- a/src/varta/view/ChatWindow.fxml
+++ b/src/varta/view/ChatWindow.fxml
@@ -27,17 +27,9 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <!-- <ToolBar layoutX="209.0" layoutY="374.0" prefHeight="28.0" prefWidth="287.0">
-               <items>
-                  <ImageView fx:id="happy" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../img/happy.jpeg" />
-                     </image>
-                  </ImageView>
-               </items>
-            </ToolBar> -->
+            
             <AnchorPane fx:id="friends" layoutX="13.0" layoutY="49.0" prefHeight="405.0" prefWidth="173.0" AnchorPane.bottomAnchor="194.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="709.0" AnchorPane.topAnchor="49.0" />
-            <Slider fx:id="timeToLive" layoutX="196.0" layoutY="462.0" orientation="VERTICAL" prefHeight="147.0" prefWidth="16.0" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="196.0" AnchorPane.rightAnchor="683.0" AnchorPane.topAnchor="462.0" />
+            <Slider fx:id="timeToLive" layoutX="196.0" layoutY="462.0" min="5.0" orientation="VERTICAL" prefHeight="147.0" prefWidth="16.0" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="196.0" AnchorPane.rightAnchor="683.0" AnchorPane.topAnchor="462.0" />
             <Button fx:id="snap" layoutX="93.0" layoutY="463.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="93.0" text="Send Snap" AnchorPane.bottomAnchor="141.0" AnchorPane.leftAnchor="93.0" AnchorPane.rightAnchor="709.0" AnchorPane.topAnchor="463.0">
                <font>
                   <Font size="10.0" />
@@ -63,6 +55,7 @@
                   <Font size="10.0" />
                </font>
             </Button>
+            <WebView fx:id="chatBox" depthTest="ENABLE" layoutX="223.0" layoutY="86.0" prefHeight="364.0" prefWidth="623.0" />
             <Button fx:id="view_video" layoutX="10.0" layoutY="463.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="77.0" text="View Video">
                <font>
                   <Font size="10.0" />
@@ -73,7 +66,6 @@
                   <Font size="10.0" />
                </font>
             </Button>
-            <WebView fx:id="chatBox" depthTest="ENABLE" layoutX="223.0" layoutY="63.0" prefHeight="387.0" prefWidth="623.0" />
             <Button fx:id="friendButton" layoutX="605.0" layoutY="10.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="87.0" text="Friends" />
             <Button fx:id="recButton" layoutX="700.0" layoutY="10.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="103.0" text="Add Friends" />
             <Button fx:id="rand" layoutX="810.0" layoutY="10.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="78.0" text="Random" />
@@ -88,6 +80,11 @@
                </font>
             </Button>
             <HTMLEditor fx:id="sendMsg" htmlText="" layoutX="222.0" layoutY="462.0" prefHeight="147.0" prefWidth="526.0" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="222.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="462.0" />
+            <Label fx:id="fromserver" layoutX="229.0" layoutY="53.0" prefHeight="30.0" prefWidth="530.0" text="Server:" textFill="#c31414" visible="false">
+               <font>
+                  <Font name="System Bold Italic" size="13.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
